# OrbitalChat

./: .env.example  .gitignore  DECISIONS.md  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
backend/: Dockerfile
backend/src/takehome/: config.py
backend/src/takehome/db/: models.py  session.py
backend/src/takehome/services/: conversation.py  document.py  llm.py
backend/src/takehome/web/: app.py
backend/src/takehome/web/routers/: conversations.py  documents.py  export.py  messages.py
data/: customer_feedback.md  usage_events.csv
frontend/: Dockerfile  biome.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: ChatInput.tsx  ChatSidebar.tsx  ChatWindow.tsx  DocumentUpload.tsx  DocumentViewer.tsx  EmptyState.tsx  MessageBubble.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  scroll-area.tsx  tooltip.tsx
frontend/src/hooks/: use-conversations.ts  use-document.ts  use-messages.ts
frontend/src/lib/: api.ts  utils.ts
scripts/: generate-sample-docs.py
